--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -356,7 +356,20 @@ crypto_libbitcoin_crypto_base_a_SOURCES = \
   crypto/sha256.cpp \
   crypto/sha256.h \
   crypto/sha512.cpp \
-  crypto/sha512.h
+  crypto/sha512.h \
+  crypto/sph_types.h \
+  crypto/sph_blake.h \
+  crypto/sph_groestl.h \
+  crypto/sph_keccak.h \
+  crypto/sph_bmw.h \
+  crypto/sph_jh.h \
+  crypto/sph_skein.h \
+  crypto/blake.c \
+  crypto/bmw.c \
+  crypto/groestl.c \
+  crypto/jh.c \
+  crypto/keccak.c \
+  crypto/skein.c
 
 if USE_ASM
 crypto_libbitcoin_crypto_base_a_SOURCES += crypto/sha256_sse4.cpp
