--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 *.tar.gz
 
 *.exe
-src/bitcoin
-src/bitcoind
-src/bitcoin-cli
-src/bitcoin-tx
-src/test/test_bitcoin
-src/test/test_bitcoin_fuzzy
-src/qt/test/test_bitcoin-qt
+src/dimecoin
+src/dimecoind
+src/dimecoin-cli
+src/dimecoin-tx
+src/test/test_dimecoin
+src/test/test_dimecoin_fuzzy
+src/qt/test/test_dimecoin-qt
 
 # autoreconf
 Makefile.in
@@ -80,13 +80,13 @@ src/qt/bitcoin-qt.includes
 # Compilation and Qt preprocessor part
 *.qm
 Makefile
-bitcoin-qt
-Bitcoin-Qt.app
+dimecoin-qt
+Dimecoin-Qt.app
 background.tiff*
 
 # Unit-tests
 Makefile.test
-bitcoin-qt_test
+test_dimecoin-qt
 
 # Resources cpp
 qrc_*.cpp
@@ -99,7 +99,7 @@ build
 *.gcno
 *.gcda
 /*.info
-test_bitcoin.coverage/
+test_dimecoin.coverage/
 total.coverage/
 coverage_percent.txt
 
