--- a/.github/workflows/dimecoinprotocol.yml
+++ b/.github/workflows/dimecoinprotocol.yml
@@ -6,23 +6,25 @@ jobs:
   build:
     runs-on: ubuntu-22.04
     strategy:
-        matrix:
-          os: [x86_64-linux-gnu]
+      matrix:
+        os: [x86_64-linux-gnu]
 
     steps:
-      - uses: actions/checkout@v2
-      
+      - uses: actions/checkout@v4
+
       - name: Get Dependencies
-        run:  sudo apt update && sudo apt-get install build-essential libtool autotools-dev automake pkg-config libssl-dev libevent-dev bsdmainutils python3 libboost-system-dev libboost-filesystem-dev libboost-chrono-dev libboost-test-dev libboost-thread-dev libboost-dev libsqlite3-dev libqt5gui5 libqt5core5a libqt5dbus5 qttools5-dev qttools5-dev-tools libqrencode-dev software-properties-common pandoc
-      
-      - name: Install BerkleyDB
+        run: sudo apt update && sudo apt-get install -y build-essential libtool autotools-dev automake pkg-config libssl-dev libevent-dev bsdmainutils python3 libboost-system-dev libboost-filesystem-dev libboost-chrono-dev libboost-test-dev libboost-thread-dev libboost-dev libsqlite3-dev libqt5gui5 libqt5core5a libqt5dbus5 qttools5-dev qttools5-dev-tools libqrencode-dev software-properties-common pandoc
+
+      - name: Install BerkeleyDB
         run: ./contrib/install_db4.sh `pwd` --enable-cxx
 
       - name: Auto Generate
         run: ./autogen.sh
 
       - name: Configure
-        run: export BDB_PREFIX="${PWD}/db4" && ./configure BDB_LIBS="-L${BDB_PREFIX}/lib -ldb_cxx-4.8" BDB_CFLAGS="-I${BDB_PREFIX}/include" --without-gui --disable-tests
+        run: |
+          export BDB_PREFIX="${PWD}/db4"
+          ./configure BDB_LIBS="-L${BDB_PREFIX}/lib -ldb_cxx-4.8" BDB_CFLAGS="-I${BDB_PREFIX}/include" --without-gui --disable-tests
 
       - name: Make
         run: make -j4
@@ -30,9 +32,11 @@ jobs:
       - name: Make Check
         run: make check
 
-      - name: Upload Test Suite Log
-        uses: actions/upload-artifact@v3
+      - name: Upload Test Suite Log (on failure)
         if: failure()
+        uses: actions/upload-artifact@v4
         with:
           name: test-suite-log
-          path: /src/test-suite.log
+          path: ./src/test-suite.log
+          if-no-files-found: ignore
+
